--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-main-container {
+.main-container {
     padding-top: 100px;
     padding-right: 15px;
     padding-left: 15px;
@@ -17,5 +17,5 @@ main-container {
 input,
 select,
 textarea {
-    max-width: 400px;
+    max-width: 5000px;
 }
