--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -13,8 +13,11 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ms-auto">
+    <div
+      class="collapse navbar-collapse justify-content-end"
+      id="navbarResponsive"
+    >
+      <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/produtos']">Produtos</a>
         </li>
@@ -25,7 +28,9 @@
           <a class="nav-link" [routerLink]="['/contato']">Contato</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/home']">Features</a>
+          <a class="nav-link" [routerLink]="['/feature-data-binding']"
+            >Feature</a
+          >
         </li>
       </ul>
     </div>
