--- a/src/app/produtos/lista-produto/lista-produto.component.html
+++ b/src/app/produtos/lista-produto/lista-produto.component.html
@@ -19,11 +19,30 @@
             />
           </div>
         </a>
-        <div class="card-body">
-          <h4 class="card-title">{{ produto.nome }}</h4>
-          <p>Por apenas:</p>
+        <h4 class="card-title">{{ produto.nome | titlecase }}</h4>
+        <div [ngSwitch]="produto.promocao">
+          <p *ngSwitchCase="true">Promoção!</p>
+          <p *ngSwitchCase="false">Por apenas:</p>
+        </div>
+
+        <div *ngIf="produto.promocao" class="card-body">
           <div>
-            <h4>R$: {{ produto.valor }}</h4>
+            <h4 class="" card-text>
+              De:
+              <small>
+                <del>
+                  {{ produto.valor | currency: "BRL":"symbol":"1.2-2":"pt" }}
+                </del>
+              </small>
+              {{ produto.valorPromo | currency: "BRL":"symbol":"1.2-2":"pt" }}
+            </h4>
+          </div>
+        </div>
+        <div *ngIf="!produto.promocao" class="card-body">
+          <div>
+            <h4>
+              {{ produto.valor | currency: "BRL":"symbol":"1.2-2":"pt" }}
+            </h4>
           </div>
         </div>
         <div class="card-footer">
