--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -19,6 +19,9 @@
     >
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/cadastro']">Cadastro</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/produtos']">Produtos</a>
         </li>
         <li class="nav-item">
