--- a/src/app/demos/reactiveForms/cadastro/cadastro.component.html
+++ b/src/app/demos/reactiveForms/cadastro/cadastro.component.html
@@ -6,109 +6,58 @@
       <div class="form-group">
         <label class="col-md-2 control-label" for="nome">Nome Completo</label>
         <div class="col-md-10">
-          <input
-            class="form-control"
-            id="nome"
-            type="text"
-            placeholder="Nome (Requrido)"
-            formControlName="nome"
-            [ngClass]="{
-              'is-invalid':
-                cadastroForm.get('nome')?.errors &&
-                (cadastroForm.get('nome')?.dirty ||
-                  cadastroForm.get('nome')?.touched)
-            }"
-          />
-          <span
-            class="text-danger"
-            *ngIf="
-              cadastroForm.get('nome')?.errors &&
-              (cadastroForm.get('nome')?.dirty ||
-                cadastroForm.get('nome')?.touched)
-            "
-          >
-            <p>Preencha o campo nome</p>
+          <input class="form-control" id="nome" type="text" placeholder="Nome (requerido)" formControlName="nome"
+            [ngClass]="{'is-invalid': displayMessage.nome }" />
+          <span class="text-danger" *ngIf="displayMessage.nome">
+            <p [innerHTML]="displayMessage.nome"></p>
           </span>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-md-2 control-label" for="email">CPF</label>
+        <label class="col-md-2 control-label">CPF</label>
         <div class="col-md-10">
-          <input
-            class="form-control"
-            id="cpf"
-            type="text"
-            placeholder="CPF (requerido)"
-            formControlName="cpf"
-            cpf
-            [textMask]="{ mask: MASKS['cpf'].textMask }"
-          />
-          <span
-            class="text-danger"
-            *ngIf="cadastroForm.get('cpf')?.errors?.['cpf']
-            && cadastroForm.get('cpf')?.dirty 
-            || cadastroForm.get('cpf')?.touched"
-            >CPF Inválido
+          <input class="form-control" id="cpf" type="text" placeholder="CPF (requerido)" formControlName="cpf" cpf
+            [textMask]="{mask: MASKS.cpf.textMask}" [ngClass]="{'is-invalid': displayMessage.cpf }" />
+          <span class="text-danger" *ngIf="displayMessage.cpf">
+            <p [innerHTML]="displayMessage.cpf"></p>
           </span>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-md-2 control-label" for="email">Email</label>
+        <label class="col-md-2 control-label">E-mail</label>
         <div class="col-md-10">
-          <input
-            class="form-control"
-            id="email"
-            type="text"
-            placeholder="Email (Requrido)"
-            formControlName="email"
-          />
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-md-2 control-label" for="senha">Senha</label>
-        <div class="col-md-10">
-          <input
-            class="form-control"
-            id="senha"
-            type="password"
-            placeholder="Senha (Requrido)"
-            formControlName="senha"
-          />
-          <span
-            class="text-danger"
-            *ngIf="cadastroForm.get('senha')?.errors?.['senha']
-            && cadastroForm.get('senha')?.dirty 
-            || cadastroForm.get('senha')?.touched"
-            >Senha deve ter entre 6 a 15 caracteres
+          <input class="form-control" id="email" type="text" placeholder="E-mail (requerido)" formControlName="email"
+            [ngClass]="{'is-invalid': displayMessage.email }" />
+          <span class="text-danger" *ngIf="displayMessage.email">
+            <p [innerHTML]="displayMessage.email"></p>
           </span>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-md-2 control-label" for="senhaConfirmacao"
-          >Confirme a Senha</label
-        >
+        <label class="col-md-2 control-label">Senha</label>
         <div class="col-md-10">
-          <input
-            class="form-control"
-            id="senhaConfirmacao"
-            type="password"
-            placeholder="Confirmar Senha (Requrido)"
-            formControlName="confirmacaoSenha"
-          />
+          <input class="form-control" id="senha" type="password" placeholder="Senha (requerido)" formControlName="senha"
+            [ngClass]="{'is-invalid': displayMessage.senha }" />
+          <span class="text-danger" *ngIf="displayMessage.senha">
+            <p [innerHTML]="displayMessage.senha"></p>
+          </span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-md-2 control-label">Confirme a Senha</label>
+        <div class="col-md-10">
+          <input class="form-control" id="senhaConfirmacao" type="password" placeholder="Confirme a Senha (requerido)"
+            formControlName="senhaConfirmacao" [ngClass]="{'is-invalid': displayMessage.senhaConfirmacao }" />
+          <span class="text-danger" *ngIf="displayMessage.senhaConfirmacao">
+            <p [innerHTML]="displayMessage.senhaConfirmacao"></p>
+          </span>
         </div>
       </div>
       <div class="form-group">
         <div class="col-md-4 col-md-offset-2">
-          <span
-            ><button
-              class="btn btn-success"
-              id="Registrar"
-              [disabled]="!cadastroForm.valid"
-              type="submit"
-            >
+          <span><button class="btn btn-success" id="Registrar" [disabled]="!cadastroForm.valid" type="submit">
               Registrar
-            </button></span
-          >
+            </button></span>
         </div>
       </div>
       <div class="form-group">
