feat:input decorator

--- a/src/app/produtos/lista-produto/lista-produto.component.html
+++ b/src/app/produtos/lista-produto/lista-produto.component.html
@@ -1,4 +1,4 @@
-<div class="container main-container">
+<!-- <div class="container main-container">
   <div class="row text-center">
     <div
       *ngFor="let produto of produtos"
@@ -53,4 +53,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
