--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -2,21 +2,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" [routerLink]="['/home']">Angular Project</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarResponsive"
-      aria-controls="navbarResponsive"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div
-      class="collapse navbar-collapse justify-content-end"
-      id="navbarResponsive"
-    >
+    <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/cadastro']">Cadastro</a>
@@ -31,9 +21,7 @@
           <a class="nav-link" [routerLink]="['/contato']">Contato</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/feature-data-binding']"
-            >Feature</a
-          >
+          <a class="nav-link" [routerLink]="['/feature-data-binding']">Feature</a>
         </li>
       </ul>
     </div>
